test/nl/formats/liberty/benchmarks/errors/nested_bundle_error.lib
library (example) {
  cell ("cell_def") {
    bundle (D) {
      members (D0);
      bundle (INNER) {
        members (D0);
        pin (D0) {
          direction : input;
        }
      }
    }
  }
}
